--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -213,7 +213,7 @@ body {
   border: 1px solid $govuk-grey-2;
   border-radius: 4px;
   box-shadow: inset 0 1px 1px rgba(#000, 0.075);
-  color: $govuk-grey-4;
+  color: $govuk-black;
   display: inline-block;
   font-size: 14px;
   line-height: 1.4;
